# pharo_occt_cwrapper

./: .gitignore  CMakeLists.txt  README.md
src/: my_c_wrapper.cpp  my_c_wrapper.h
